Update to target API 34